# devops-job-tracker

./: .dockerignore  .env  README..md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml
backend/: Dockerfile  crud.py  fly.tom1  pyproject.toml  requirements.txt  routes.py
backend/app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  schemes.py
backend/app/api/: routes.py
backend/tests/: test_jobs.py  test_main.py  test_sanity.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: JobForm.jsx
frontend/src/pages/: Dashboard.jsx  EditJob.jsx
monitoring/: prometheus.yml
terraform/: main.tf  outputs.tf  variables.tf
